--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <p class="ebele"> Oluwatosin <a style="color: blue;" href="">@tosingirlfx</a> <br><br>
                             <a style="color: blue;" href="">Printivo</a>
                             delivered my mugs in 24hrs. <br> Thank you so much! It's nice doing <br> business with you. More to come. </p></div>
-                    <div id="hi" class="tit"></div><img id="h" class="tet"src="./printivo image/twiter.PNG" alt="">
+                    <div id="hi" class="tit"></div><img class="tet"src="./printivo image/twiter.PNG" alt="">
                         <p class="ebe"> Oluwatosin <a style="color: blue;"href="">@olgablark</a> <br><br>
                         These guys <a style="color: blue;" href="">@Printivo</a> are  really <br> awesome and affordable. Excellent <br> customer service and delivery too. <br> Thank you. </p></div>
                 </div>
